[package]
name = "save_pcap"
version = "0.1.0"
edition = "2024"

[dependencies]
pcap = "2.3.0"
pcap-file = "3.0.0-rc1"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
chrono = "0.4"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
